--- a/contact.html
+++ b/contact.html
@@ -74,11 +74,11 @@
                                 <a href="#">Forget Password?</a>
                             </div>
                             <input type="submit" value="Log in">
-                            <button type="submit">
-                                <img src="./images/google.svg" alt="google">
-                                <span>Log in with google</span>
-                            </button>
                         </form>
+                        <button type="button">
+                            <img src="./images/google.svg" alt="google">
+                            <span>Log in with google</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.2835129505584!2d27.52014321267196!3d53.90893773236516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf90a9621fc1%3A0xda97311536089fd3!2zSVQtQWNhZGVteSAtINC-0LHRgNCw0LfQvtCy0LDRgtC10LvRjNC90YvQtSBJVC3QutGD0YDRgdGLINCyINCc0LjQvdGB0LrQtQ!5e0!3m2!1sru!2sby!4v1728230740787!5m2!1sru!2sby"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
         </div>
 
         <footer>
