--- a/log-in.html
+++ b/log-in.html
@@ -44,11 +44,11 @@
                         <a href="#">Forget Password?</a>
                     </div>
                     <input type="submit" value="Log in">
-                    <button type="submit">
-                        <img src="./images/google.svg" alt="google">
-                        <span>Log in with google</span>
-                    </button>
                 </form>
+                <button type="button">
+                    <img src="./images/google.svg" alt="google">
+                    <span>Log in with google</span>
+                </button>
             </div>
         </div>
     </div>
