--- a/menu.html
+++ b/menu.html
@@ -69,11 +69,11 @@
                                 <a href="#">Forget Password?</a>
                             </div>
                             <input type="submit" value="Log in">
-                            <button type="submit">
-                                <img src="./images/google.svg" alt="google">
-                                <span>Log in with google</span>
-                            </button>
                         </form>
+                        <button type="button">
+                            <img src="./images/google.svg" alt="google">
+                            <span>Log in with google</span>
+                        </button>
                     </div>
                 </div>
             </div>
