add title for a

--- a/contact.html
+++ b/contact.html
@@ -27,18 +27,18 @@
 
         <header class="center">
             <div class="logo">
-                <a href="./homepage.html" class="logo-letter">D</a>
+                <a href="./homepage.html" class="logo-letter" title="Go homepage">D</a>
                 <h3 class="logo-name">Delizi<span class="logo-name-orange">oso</span></h3>
             </div>
             <div class="main-navigation">
                 <nav>
                     <ul class="main-nav">
-                        <li><a href="./homepage.html">Home</a></li>
-                        <li><a href="./menu.html">Menu</a></li>
-                        <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="#">Order online</a></li>
-                        <li><a href="#">Reservation</a></li>
-                        <li><a href="./contact.html">Contact us</a></li>
+                        <li><a href="./homepage.html" title="Go homepage">Home</a></li>
+                        <li><a href="./menu.html" title="See our menu">Menu</a></li>
+                        <li><a href="./about-us.html" title="Learn about us">About us</a></li>
+                        <li><a href="#" title="Order online">Order online</a></li>
+                        <li><a href="#" title="Reservation">Reservation</a></li>
+                        <li><a href="./contact.html" title="You can write us">Contact us</a></li>
                     </ul>
                 </nav>
                 <img src="./images/header/burger.svg" alt="burger" class="burger">
@@ -50,18 +50,18 @@
                 </div>
                 <div class="log-in">
                     <button class="log-in-btn">Log in</button>
-                    <a href="./log-in.html" class="log-in-btn-link">Log in</a>
+                    <a href="./log-in.html" class="log-in-btn-link" title="Log in if you have got account">Log in</a>
                 </div>
             </div>
             <div class="modal-window">
                 <div class="modal-box">
                     <div class="logo">
-                        <a href="./homepage.html" class="logo-letter">D</a>
+                        <a href="./homepage.html" class="logo-letter" title="Go homepage">D</a>
                     </div>
                     <div class="modal-form-login">
                         <h2>Login</h2>
                         <p>
-                            Don't have an account? <a href="#">Sign up</a>
+                            Don't have an account? <a href="#" title="Sign up">Sign up</a>
                         </p>
                         <form autocomplete="on" method="get" name="login">
                             <input type="email" name="email" placeholder="Email address" required>
@@ -71,7 +71,7 @@
                                     <input type="checkbox" name="remember" id="remember">
                                     <label for="remember">Remember me</label>
                                 </div>
-                                <a href="#">Forget Password?</a>
+                                <a href="#" title="Forget Password?">Forget Password?</a>
                             </div>
                             <input type="submit" value="Log in">
                         </form>
@@ -117,7 +117,7 @@
                     <p>40.885147,-73.9220459</p>
                 </div>
                 <div class="spot-contact">
-                    <a href="https://web.telegram.org/" target="_blank"><img src="./images/telegram.svg"
+                    <a href="https://web.telegram.org/" target="_blank" title="Go telegram"><img src="./images/telegram.svg"
                             alt="telegram"></a>
                 </div>
             </div>
