add title for footer a

--- a/menu.html
+++ b/menu.html
@@ -289,20 +289,20 @@
             <div class="footer-wrapper center">
                 <div class="footer-social">
                     <div class="logo">
-                        <a href="./homepage.html" class="logo-letter">D</a>
+                        <a href="./homepage.html" class="logo-letter" title="Go homepage">D</a>
                         <h3 class="logo-name">Delizi<span class="logo-name-orange">oso</span></h3>
                     </div>
                     <p class="footer-descr">
                         Viverra gravida morbi egestas facilisis tortor netus non duis tempor.
                     </p>
                     <div class="footer-social-links">
-                        <a href="http://twitter.com/" target="_blank">
+                        <a href="http://twitter.com/" target="_blank" title="See us in twitter">
                             <img src="./images/twitter.svg" alt="twitter">
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank" title="See us in instagram">
                             <img src="./images/instagram.svg" alt="instagram">
                         </a>
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a href="https://www.facebook.com/" target="_blank" title="See us in facebook">
                             <img src="./images/facebook.svg" alt="facebook">
                         </a>
                     </div>
@@ -310,19 +310,19 @@
                 <div class="footer-pages">
                     <h4>Page</h4>
                     <menu>
-                        <li><a href="./homepage.html">Home</a></li>
-                        <li><a href="./menu.html">Menu</a></li>
-                        <li><a href="#">Order online</a></li>
-                        <li><a href="#">Catering</a></li>
-                        <li><a href="#">Reservation</a></li>
+                        <li><a href="./homepage.html" title="Go homepage">Home</a></li>
+                        <li><a href="./menu.html" title="See our menu">Menu</a></li>
+                        <li><a href="#" title="Order online">Order online</a></li>
+                        <li><a href="#" title="Catering">Catering</a></li>
+                        <li><a href="#" title="Reservation">Reservation</a></li>
                     </menu>
                 </div>
                 <div class="footer-information">
                     <h4>Information</h4>
                     <menu>
-                        <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="#">Testimonial</a></li>
-                        <li><a href="#">Event</a></li>
+                        <li><a href="./about-us.html" title="Read about us">About us</a></li>
+                        <li><a href="#" title="Testimonial">Testimonial</a></li>
+                        <li><a href="#" title="Event">Event</a></li>
                     </menu>
                 </div>
                 <div class="footer-contacts">
@@ -331,8 +331,8 @@
                         <li>
                             <p>3247 Johnson Ave, Bronx, NY 10463, Amerika Serikat</p>
                         </li>
-                        <li><a href="mailto:delizioso@gmail.com">delizioso@gmail.com</a></li>
-                        <li><a href="tel:+12345678901">+123 4567 8901</a></li>
+                        <li><a href="mailto:delizioso@gmail.com" title="Write us to e-mail">delizioso@gmail.com</a></li>
+                        <li><a href="tel:+12345678901" title="Call us">+123 4567 8901</a></li>
                     </menu>
                 </div>
             </div>
